--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -83,6 +83,11 @@
   border-top: 1px solid #E6E6E6;
 }
 
+.nav {
+  margin-bottom: 30px;
+  margin-top: 50px;
+}
+
 @media (max-width: 960px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
