photo bon format

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
             <% @games.each do |game| %>
               <div class="scores">
 
-                <img class="scores-image" src="<%= cl_image_path game.theme.photo %>">
+                <img class="scores-image" src="<%= cl_image_path game.theme.photo, width: 175, height: 100 ,crop: :fill %>">
 
                 <div class="scores-body text-center">
                   <p><%= game.theme.city.name %></p>
