wallah à la bien  avec jéjé bro

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -123,9 +123,9 @@
             </div> <!-- fin de scores -->
           <% end %> <!-- fin de challenges[1].empty? -->
 
-          <% end %> <!-- fin de challenges[1] -->
           </div> <!-- fin challenges-lost -->
-        </div> <!-- fin de challenges-lost -->
+          <% end %> <!-- fin de challenges[1] -->
+        </div> <!-- fin de scores-array -->
 
         </div> <!-- fin row challenges -->
 
