--- a/app/views/pages/leaderboard.html.erb
+++ b/app/views/pages/leaderboard.html.erb
@@ -1,11 +1,12 @@
 <br>
 <br>
+<br>
 
+<div class="container container-center">
 
-<h1 class= 'text-center'>Leaderboard</h1>
-
-<!-- city tabs: only Paris for Demo Day -->
-<h2>Paris</h2>
+  <div id="leaderboard-title" class="background-purple white-text">
+    <span><h1>Leaderboard :</h1><h2>Paris</h2></span>
+  </div>
 
 <!-- theme tabs -->
 <ul class="nav nav-tabs" role="tablist">
