lot of stuff responsive poi and answer ok

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -98,3 +98,36 @@
     color: #ffffff;
   }
 }
+
+.btn-play {
+  display: none;
+}
+
+@media (max-width: 414px) {
+  /* For a screen < 414px, this CSS will be read */
+  .btn-play {
+    display: block !important;
+    background-image: image-url("play_now.svg");
+    background-size: 100% 100%;
+    height: 45px;
+    width: 45px;
+    margin: 0px 13px;
+
+    a {
+      text-decoration: none;
+    }
+  }
+
+  .btn-score-final {
+    display: block !important;
+    background-image: image-url("rocket_w.svg");
+    background-size: 100% 100%;
+    height: 45px;
+    width: 45px;
+    margin: 0px 13px;
+
+    a {
+      text-decoration: none;
+    }
+  }
+}
