--- a/app/assets/stylesheets/components/_navbar_mobile.scss
+++ b/app/assets/stylesheets/components/_navbar_mobile.scss
@@ -3,9 +3,9 @@
   right: 0;
   top: 0;
   color: white;
-  background: $purple;
-  font-size: 24px;
-  padding: 16px 16px 32px 32px;
+  background: #860CE6;
+  font-size: 16px;
+  padding: 10px 10px 20px 20px;
   border-radius: 0% 0% 0% 100%;
   transition: 1s;
   cursor: pointer;
