--- a/app/views/shared/_navbar_mobile.html.erb
+++ b/app/views/shared/_navbar_mobile.html.erb
@@ -1,6 +1,9 @@
 <i id="burger" class="material-icons">menu</i>
 <div id="links">
   <% if user_signed_in? %>
+    <%= link_to root_path, class: 'm-menu' do %>
+      <%= t(".profile", default: "Home") %>
+    <% end %>
     <%= link_to user_path(current_user), class: 'm-menu' do %>
       <%= t(".profile", default: "Profile") %>
     <% end %>
@@ -12,6 +15,9 @@
     <% end %>
   <% else %>
     <!-- Login link (when logged out) -->
+    <%= link_to root_path, class: 'm-menu' do %>
+      <%= t(".profile", default: "Home") %>
+    <% end %>
     <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "m-menu" %>
   <% end %>
 </div>
