--- a/app/assets/stylesheets/components/_bar_timer.scss
+++ b/app/assets/stylesheets/components/_bar_timer.scss
@@ -21,3 +21,31 @@
   height: 1em;
   // border-radius: 0.5em;
 }
+
+@media (max-width: 414px) {
+  /* For a screen < 320px, this CSS will be read */
+  .position-right {
+    position: absolute;
+    left: 22px;
+    top: 100px;
+    z-index: 1000;
+  }
+
+  .bar {
+    width: 1.5em;
+    height: 50vh;
+    // border-radius: 0.5em;
+    position: relative;
+    background: $purple;
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,0.1);
+  }
+
+  .bar .percentage {
+    position: relative;
+    font-size: 1em;
+    background: #7c7c7c;
+    height: 1em;
+    // border-radius: 0.5em;
+  }
+
+}
