--- a/app/views/pois/_poi_mobile_show.html.erb
+++ b/app/views/pois/_poi_mobile_show.html.erb
@@ -1,17 +1,27 @@
-<div class="POI_counter POI_name text-center">
-  <h2><%= @counter_left %>/<%= @counter_total %> - <%= @poi.name %></h2>
+<div class="POI_counter">
+  <h2><%= @counter_left %>/<%= @counter_total %></h2>
+</div>
+<div class="POI_name text-center">
+  <h2><%= @poi.name %></h2>
 </div>
 
 <div class="wrapper-map">
   <div
     id="map"
     style="width: 100vw;
-    height: 100vh;"
+    height: 84vh;"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     data-game="on">
     <div class="position-right">
       <%= render 'shared/bar_timer' %>
     </div>
+  </div>
+</div>
+
+<div class="menu-score-parent">
+  <div class="menu-score" id="score">
+    <%# empty container to display the answer %>
+    <div class="menu-score-container" id="items"></div>
   </div>
 </div>
 
@@ -23,14 +33,3 @@
     <%= f.submit id: "answer-button", class: "btn btn-primary btn-pimp"%>
   <% end %>
 </div>
-
-<!-- <div class="menu-score ">
-  <div class="score-card " style="background-image: url(<%= image_path("card_score.svg")%>)">
-    <div class="score-card-lvl-2">
-
-
-      <%# empty container to display the answer %>
-      <div class="menu-score-container"></div>
-    </div>
-  </div>
-</div> -->
