--- a/app/assets/stylesheets/components/_score_card.scss
+++ b/app/assets/stylesheets/components/_score_card.scss
@@ -141,6 +141,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
   }
 
   .menu-score {
@@ -148,6 +149,18 @@
     top: 60px;
     right: 20px;
     z-index: 3000;
+
+    h1, h2, h3, h4, h5 {
+      color: #fff;
+    }
+
+    h1 {
+      font-size: 40px;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
 
     p {
       font-size: 17px;
@@ -203,6 +216,7 @@
     color: #fff;
     padding: 10px;
     margin: 0;
+    font-size: 20px;
   }
 
   .POI_name {
@@ -210,14 +224,16 @@
     position: absolute;
     top: -3px;
     left: 60px;
-    // text-align: left;
-    /* margin-left: 15px; */
+    text-align: left;
+    margin-left: 15px;
     /* padding: 0px 5px; */
     /* border-radius: 50%; */
     /* background-color: #860CE6; */
 
     h2 {
       color: $purple;
+      font-size: 20px;
+      margin-left: 45px;
     }
   }
 
@@ -233,16 +249,7 @@
     margin-right: 10px;
   }
 
-  h1, h2, h3, h4, h5 {
-    color: #fff;
-  }
-  h1 {
-    font-size: 40px;
-  }
 
-  h2 {
-    font-size: 20px;
-  }
 
   p {
     color: #fff;
