--- a/app/assets/stylesheets/components/_score_card.scss
+++ b/app/assets/stylesheets/components/_score_card.scss
@@ -234,7 +234,7 @@
   }
 
   h1, h2, h3, h4, h5 {
-    color: #fff;
+    color: #000000;
   }
   h1 {
     font-size: 40px;
@@ -245,7 +245,7 @@
   }
 
   p {
-    color: #fff;
+    color: #000000;
     font-size: 20px;
     margin: 0;
     padding: 0;
