--- a/app/assets/stylesheets/components/_score.scss
+++ b/app/assets/stylesheets/components/_score.scss
@@ -40,12 +40,12 @@
   text-align: center;
   margin: 0px;
 }
-.scores-controls a {
-  padding: 0 20px;
-  font-size: 17px;
-  color: #E6E6E6;
-  text-decoration: none;
-}
+// .scores-controls a {
+//   padding: 0 20px;
+//   font-size: 17px;
+//   color: #E6E6E6;
+//   text-decoration: none;
+// }
 
 // .scores-controls a:hover {
 //   color: #D3473C !important
