--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -21,11 +21,15 @@
         <div class="score-title text-center">
           <%= @opponent_name %>  score: <%= @total_score_opponent %> points</h2>
           <% if @total_score > @total_score_opponent %>
-            "You're the best arouuund!!!" karaté kid
+            <img src="https://media.giphy.com/media/bVivPTy6pO6ru/giphy.gif" alt="you re the best" tyle="max-height: 150px;">
+            <p>
+              You're the best! arouuund!!!
+            </p>
           <% elsif @total_score == @total_score_opponent %>
              Wow perfect tie...  I would not have taught this would happen
           <% else %>
-            You lose
+            <img src="https://media.giphy.com/media/7nMfkppqka9mo/giphy.gif" alt="loser" style="max-height: 150px;">
+            <p>Alas... you lost this game!</p>
           <% end %>
 
         </div>
